edition matches workspace

--- a/nym-gateway-directory/Cargo.toml
+++ b/nym-gateway-directory/Cargo.toml
@@ -4,7 +4,7 @@ authors.workspace = true
 repository.workspace = true
 homepage.workspace = true
 license.workspace = true
-edition = "2024"
+edition.workspace = true
 
 [lints]
 workspace = true
