add license to mixtcp cargo

--- a/mixtcp/Cargo.toml
+++ b/mixtcp/Cargo.toml
@@ -2,6 +2,7 @@
 name = "mixtcp"
 version = "0.0.1"
 edition = "2021"
+license.workspace = true
 
 [dependencies]
 smoltcp = { version = "0.12", default-features = false, features = [
