--- a/common/nym-kcp/Cargo.toml
+++ b/common/nym-kcp/Cargo.toml
@@ -21,7 +21,7 @@ byte_string = "1.0"
 bytes = { workspace = true }
 thiserror = { workspace = true }
 log = { workspace = true }
-ansi_term = "0.12"
+ansi_term = { workspace = true }
 
 [dev-dependencies]
 env_logger = "0.11"
