--- a/common/nym-lp/Cargo.toml
+++ b/common/nym-lp/Cargo.toml
@@ -6,22 +6,23 @@ edition = "2021"
 [dependencies]
 bincode = { workspace = true }
 thiserror = { workspace = true }
-parking_lot = "0.12"
-snow = "0.9.6"
-bs58 = "0.5.1"
+parking_lot = { workspace = true }
+snow = { workspace = true }
+bs58 = { workspace = true }
 serde = { workspace = true }
 bytes = { workspace = true }
-dashmap = "6.1.0"
-sha2 = "0.10"
-ansi_term = "0.12"
+dashmap = { workspace = true }
+sha2 = { workspace = true }
+ansi_term = { workspace = true }
 utoipa = { workspace = true, features = ["macros", "non_strict_integers"] }
+rand = { workspace = true }
 
+nym-crypto = { path = "../crypto", features = ["hashing", "asymmetric"] }
 nym-lp-common = { path = "../nym-lp-common" }
 nym-sphinx = { path = "../nymsphinx" }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
-rand = "0.8"
 rand_chacha = "0.3"
 
 
