--- a/common/registration/Cargo.toml
+++ b/common/registration/Cargo.toml
@@ -21,3 +21,7 @@ nym-crypto = { path = "../crypto" }
 nym-ip-packet-requests = { path = "../ip-packet-requests" }
 nym-sphinx = { path = "../nymsphinx" }
 nym-wireguard-types = { path = "../wireguard-types" }
+
+[dev-dependencies]
+bincode.workspace = true
+time.workspace = true
