--- a/Cargo.toml
+++ b/Cargo.toml
@@ -207,6 +207,7 @@ aes = "0.8.1"
 aes-gcm = "0.10.1"
 aes-gcm-siv = "0.11.1"
 ammonia = "4"
+ansi_term = "0.12"
 anyhow = "1.0.98"
 arc-swap = "1.7.1"
 argon2 = "0.5.0"
@@ -254,6 +255,7 @@ dirs = "6.0"
 dotenvy = "0.15.6"
 dyn-clone = "1.0.19"
 ecdsa = "0.16"
+curve25519-dalek = "4.1"
 ed25519-dalek = "2.1"
 encoding_rs = "0.8.35"
 env_logger = "0.11.8"
