--- a/sdk/typescript/codegen/contract-clients/package.json
+++ b/sdk/typescript/codegen/contract-clients/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nymproject/contract-clients",
-  "version": "1.3.0-rc.0",
+  "version": "1.3.1",
   "description": "A client for all Nym smart contracts",
   "license": "Apache-2.0",
   "author": "Nym Technologies SA",
