--- a/common/nymsphinx/anonymous-replies/Cargo.toml
+++ b/common/nymsphinx/anonymous-replies/Cargo.toml
@@ -25,3 +25,7 @@ workspace = true
 
 [dev-dependencies]
 rand_chacha = { workspace = true }
+
+[ features ]
+default = []
+otel = ["nym-sphinx-addressing/otel"]
