--- a/service-providers/ip-packet-router/Cargo.toml
+++ b/service-providers/ip-packet-router/Cargo.toml
@@ -50,3 +50,7 @@ tokio-tun.workspace = true
 
 [dev-dependencies]
 async-trait.workspace = true
+
+[features]
+default = []
+otel = ["nym-client-core/otel"]
