--- a/clients/socks5/Cargo.toml
+++ b/clients/socks5/Cargo.toml
@@ -53,3 +53,7 @@ nym-validator-client = { path = "../../common/client-libs/validator-client", fea
 [features]
 default = []
 eth = []
+otel = [
+    "nym-socks5-client-core/otel",
+    "nym-bin-common/otel",
+]
