--- a/gateway/Cargo.toml
+++ b/gateway/Cargo.toml
@@ -100,6 +100,7 @@ otel = [
     "nym-client-core/otel",
     "nym-gateway-requests/otel",
     "nym-sphinx/otel",
+    "nym-sdk/otel",
     "opentelemetry",
     "opentelemetry_sdk",
     "tracing-opentelemetry",
