--- a/nym-wallet/package.json
+++ b/nym-wallet/package.json
@@ -80,6 +80,7 @@
     "@types/big.js": "^6.1.6",
     "@types/bs58": "^4.0.1",
     "@types/jest": "^27.0.1",
+    "@types/minimatch": "5.1.2",
     "@types/node": "^16.7.13",
     "@types/qrcode.react": "^1.0.2",
     "@types/react": "^18.0.26",
@@ -130,6 +131,9 @@
     "webpack-dev-server": "^4.5.0",
     "webpack-favicons": "^1.3.8",
     "webpack-merge": "^5.8.0"
+  },
+  "resolutions": {
+    "@types/minimatch": "5.1.2"
   },
   "private": false
 }
