formatting and clippy

--- a/common/nyxd-scraper-sqlite/Cargo.toml
+++ b/common/nyxd-scraper-sqlite/Cargo.toml
@@ -23,6 +23,7 @@ nyxd-scraper-shared = { path = "../nyxd-scraper-shared" }
 [build-dependencies]
 sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
+anyhow.workspace = true
 
 [lints]
 workspace = true
