--- a/nym-data-observatory/Cargo.toml
+++ b/nym-data-observatory/Cargo.toml
@@ -45,5 +45,6 @@ utoipauto = { workspace = true }
 
 [build-dependencies]
 anyhow = { workspace = true }
+glob = "0.3.3"
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
