--- a/sdk/typescript/packages/nodejs-client/package.json
+++ b/sdk/typescript/packages/nodejs-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nymproject/nodejs-client",
-  "version": "1.4.1",
+  "version": "1.4.1-rc0",
   "license": "Apache-2.0",
   "author": "Nym Technologies SA",
   "files": [
