--- a/wasm/node-tester/Cargo.toml
+++ b/wasm/node-tester/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "nym-node-tester-wasm"
 authors = ["Jedrzej Stuczynski <andrew@nymtech.net>"]
-version = "1.3.1"
+version = "1.3.1-rc0"
 edition = "2021"
 keywords = ["nym", "sphinx", "webassembly", "privacy", "tester"]
 license = "Apache-2.0"
