--- a/sdk/typescript/packages/mix-fetch/package.json
+++ b/sdk/typescript/packages/mix-fetch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nymproject/mix-fetch",
-  "version": "1.4.1-rc0",
+  "version": "1.4.1-rc1",
   "description": "This package is a drop-in replacement for `fetch` to send HTTP requests over the Nym Mixnet.",
   "license": "Apache-2.0",
   "author": "Nym Technologies SA",
@@ -34,7 +34,7 @@
     "tsc": "tsc --noEmit true"
   },
   "dependencies": {
-    "@nymproject/mix-fetch-wasm": ">=1.2.5-rc.0 || ^1",
+    "@nymproject/mix-fetch-wasm": "^1.4.1-rc1",
     "comlink": "^4.3.1"
   },
   "devDependencies": {
