--- a/sdk/typescript/packages/sdk/package.json
+++ b/sdk/typescript/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nymproject/sdk",
-  "version": "1.4.1-rc0",
+  "version": "1.4.1-rc1",
   "license": "Apache-2.0",
   "author": "Nym Technologies SA",
   "files": [
@@ -31,7 +31,7 @@
     "tsc": "tsc --noEmit true"
   },
   "dependencies": {
-    "@nymproject/nym-client-wasm": ">=1.2.5-rc.0 || ^1",
+    "@nymproject/nym-client-wasm": "^1.4.1-rc1",
     "comlink": "^4.3.1"
   },
   "devDependencies": {
