--- a/sdk/typescript/examples/mix-fetch/browser/package.json
+++ b/sdk/typescript/examples/mix-fetch/browser/package.json
@@ -8,7 +8,7 @@
     "start": "parcel --no-cache"
   },
   "dependencies": {
-    "@nymproject/mix-fetch": ">=1.2.3-rc.0 || ^1",
+    "@nymproject/mix-fetch": "1.4.1-rc1",
     "parcel": "^2.9.3"
   },
   "private": false,
