--- a/sdk/typescript/examples/node-tester/plain-html/package.json
+++ b/sdk/typescript/examples/node-tester/plain-html/package.json
@@ -16,7 +16,7 @@
     "tsc:watch": "tsc --watch"
   },
   "dependencies": {
-    "@nymproject/sdk": ">=1.2.3-rc.0 || ^1"
+    "@nymproject/sdk": "1.4.1-rc1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
