--- a/sdk/typescript/examples/chat-app/plain-html/package.json
+++ b/sdk/typescript/examples/chat-app/plain-html/package.json
@@ -16,7 +16,7 @@
     "tsc:watch": "tsc --watch"
   },
   "dependencies": {
-    "@nymproject/sdk": "1.4.1-rc1"
+    "@nymproject/sdk": ">=1.4.1-rc1 || ^1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
