--- a/sdk/typescript/examples/chat-app/react-webpack-with-theme-example/package.json
+++ b/sdk/typescript/examples/chat-app/react-webpack-with-theme-example/package.json
@@ -20,7 +20,7 @@
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.0.1",
     "@mui/styles": "^5.0.1",
-    "@nymproject/sdk": "1.4.1-rc1",
+    "@nymproject/sdk": ">=1.4.1-rc1 || ^1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
