--- a/sdk/typescript/examples/chrome-extension/package.json
+++ b/sdk/typescript/examples/chrome-extension/package.json
@@ -9,7 +9,7 @@
     "build": "webpack"
   },
   "dependencies": {
-    "@nymproject/sdk": "1.4.1-rc1"
+    "@nymproject/sdk": ">=1.4.1-rc1 || ^1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
