--- a/sdk/typescript/examples/firefox-extension/package.json
+++ b/sdk/typescript/examples/firefox-extension/package.json
@@ -9,7 +9,7 @@
     "build": "yarn webpack"
   },
   "dependencies": {
-    "@nymproject/sdk": "1.4.1-rc1"
+    "@nymproject/sdk": ">=1.4.1-rc1 || ^1"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
