--- a/sdk/typescript/examples/node-tester/parcel/package.json
+++ b/sdk/typescript/examples/node-tester/parcel/package.json
@@ -15,7 +15,7 @@
     "tsc:watch": "tsc --watch"
   },
   "dependencies": {
-    "@nymproject/sdk": "1.4.1-rc1"
+    "@nymproject/sdk": ">=1.4.1-rc1 || ^1"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
