--- a/sdk/typescript/packages/sdk/package.json
+++ b/sdk/typescript/packages/sdk/package.json
@@ -51,6 +51,7 @@
     "@rollup/plugin-url": "^8.0.1",
     "@rollup/plugin-wasm": "^6.1.1",
     "@types/jest": "^27.0.1",
+    "@types/minimatch": "5.1.2",
     "@types/node": "^16.7.13",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
@@ -77,6 +78,9 @@
     "ts-loader": "^9.4.2",
     "typedoc": "^0.24.8",
     "typescript": "^4.8.4"
+  },
+  "resolutions": {
+    "@types/minimatch": "5.1.2"
   },
   "private": false,
   "type": "module",
