--- a/sdk/typescript/packages/mix-fetch-node/package.json
+++ b/sdk/typescript/packages/mix-fetch-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nymproject/mix-fetch-node",
-  "version": "1.4.1-rc0",
+  "version": "1.4.1",
   "description": "This package is a drop-in replacement for `fetch` in NodeJS to send HTTP requests over the Nym Mixnet.",
   "license": "Apache-2.0",
   "author": "Nym Technologies SA",
@@ -28,7 +28,7 @@
     "tsc": "tsc --noEmit true"
   },
   "dependencies": {
-    "@nymproject/mix-fetch-wasm-node": ">=1.2.5-rc.0 || ^1",
+    "@nymproject/mix-fetch-wasm-node": ">=1.4.1-rc.3 || ^1",
     "comlink": "^4.3.1",
     "fake-indexeddb": "^5.0.0",
     "node-fetch": "^3.3.2",
