--- a/sdk/typescript/packages/sdk-react/package.json
+++ b/sdk/typescript/packages/sdk-react/package.json
@@ -20,7 +20,7 @@
     "tsc": "tsc --noEmit true"
   },
   "dependencies": {
-    "@nymproject/sdk": ">=1.4.1-rc1 || ^1"
+    "@nymproject/sdk": ">=1.4.1-rc.3 || ^1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
