--- a/sdk/typescript/codegen/contract-clients/package.json
+++ b/sdk/typescript/codegen/contract-clients/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nymproject/contract-clients",
-  "version": "1.3.0-rc.0",
+  "version": "1.3.1-rc0",
   "description": "A client for all Nym smart contracts",
   "license": "Apache-2.0",
   "author": "Nym Technologies SA",
@@ -18,7 +18,7 @@
     "docs:watch": "nodemon --ext ts --watch './src/**/*' --watch './typedoc.json' --exec \"yarn docs:generate\""
   },
   "devDependencies": {
-    "@cosmwasm/ts-codegen": "^0.35.3",
+    "@cosmwasm/ts-codegen": "^1.13.3",
     "nodemon": "3.0.1",
     "npm-run-all": "^4.1.5",
     "reload": "^3.2.1",
