--- a/sdk/typescript/examples/node-tester/react/package.json
+++ b/sdk/typescript/examples/node-tester/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nymproject/sdk-example-node-tester-react",
-  "version": "1.0.4-rc.2",
+  "version": "1.0.5",
   "description": "An example project that uses WASM node tester and React",
   "license": "Apache-2.0",
   "scripts": {
@@ -11,7 +11,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
-    "@nymproject/sdk": ">=1.2.2-rc.0 || ^1",
+    "@nymproject/sdk": ">=1.4.1-rc1 || ^1",
     "parcel": "^2.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
