--- a/sdk/typescript/packages/nodejs-client/package.json
+++ b/sdk/typescript/packages/nodejs-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nymproject/nodejs-client",
-  "version": "1.4.0-rc.0",
+  "version": "1.4.1",
   "license": "Apache-2.0",
   "author": "Nym Technologies SA",
   "files": [
@@ -25,7 +25,7 @@
     "tsc": "tsc --noEmit true"
   },
   "dependencies": {
-    "@nymproject/nym-client-wasm-node": ">=1.2.4-rc.2 || ^1",
+    "@nymproject/nym-client-wasm-node": ">=1.4.1-rc.3 || ^1",
     "comlink": "^4.3.1",
     "fake-indexeddb": "^4.0.2",
     "rollup-plugin-polyfill": "^4.2.0",
