--- a/sdk/typescript/packages/sdk-react/package.json
+++ b/sdk/typescript/packages/sdk-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nymproject/sdk-react",
-  "version": "1.4.0-rc.0",
+  "version": "1.4.1",
   "license": "Apache-2.0",
   "author": "Nym Technologies SA",
   "files": [
@@ -20,7 +20,7 @@
     "tsc": "tsc --noEmit true"
   },
   "dependencies": {
-    "@nymproject/sdk": ">=1.2.2-rc.0 || ^1"
+    "@nymproject/sdk": ">=1.4.1-rc.3 || ^1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
