--- a/wasm/mix-fetch/Cargo.toml
+++ b/wasm/mix-fetch/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mix-fetch-wasm"
 authors = ["Jedrzej Stuczynski <andrew@nymtech.net>"]
-version = "1.4.0-rc.0"
+version = "1.4.1"
 edition = "2021"
 keywords = ["nym", "fetch", "wasm", "webassembly", "privacy"]
 license = "Apache-2.0"
@@ -32,6 +32,7 @@ nym-http-api-client = { path = "../../common/http-api-client" }
 nym-socks5-requests = { path = "../../common/socks5/requests" }
 nym-ordered-buffer = { path = "../../common/socks5/ordered-buffer" }
 nym-service-providers-common = { path = "../../service-providers/common" }
+nym-validator-client = { path = "../../common/client-libs/validator-client", default-features = false }
 wasm-client-core = { path = "../../common/wasm/client-core" }
 wasm-utils = { path = "../../common/wasm/utils" }
 
