--- a/docker/localnet/Dockerfile.localnet
+++ b/docker/localnet/Dockerfile.localnet
@@ -15,14 +15,26 @@ RUN cargo build --release --locked \
     -p nym-network-requester \
     -p nym-socks5-client
 
-# Install runtime dependencies
+# Install runtime dependencies including Go for wireguard-go
 RUN apt update && apt install -y \
     python3 \
     python3-pip \
     netcat-openbsd \
     jq \
     iproute2 \
+    net-tools \
+    wireguard-tools \
+    golang-go \
+    git \
     && rm -rf /var/lib/apt/lists/*
+
+# Install wireguard-go (userspace WireGuard implementation)
+RUN git clone https://git.zx2c4.com/wireguard-go && \
+    cd wireguard-go && \
+    make && \
+    cp wireguard-go /usr/local/bin/ && \
+    cd .. && \
+    rm -rf wireguard-go
 
 # Install Python dependencies for build_topology.py
 RUN pip3 install --break-system-packages base58
