--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -9,7 +9,7 @@ members = [
     "multisig/cw3-flex-multisig",
     "multisig/cw4-group",
     "vesting",
-    "performance",
+    "performance", "example-contract",
 ]
 
 [workspace.package]
