--- a/.github/workflows/ci-lint-typescript.yml
+++ b/.github/workflows/ci-lint-typescript.yml
@@ -43,9 +43,6 @@ jobs:
         with:
           go-version: "1.24.6"
 
-      - name: Install CPU Limit package
-        run: sudo apt-get update && sudo apt-get install -y cpulimit
-
       - name: Install
         run: yarn
 
@@ -56,7 +53,7 @@ jobs:
         run: yarn
 
       - name: Lint
-        run: cpulimit -l 400 yarn lint
+        run: yarn lint
 
       - name: Typecheck with tsc
         run: yarn tsc
