Max/tweak ts sdk actions (#6185)
* add taskset to wasm release build commands

* bump taskset cores

--- a/wasm/full-nym-wasm/Makefile
+++ b/wasm/full-nym-wasm/Makefile
@@ -1,5 +1,5 @@
 all: build-full
 
 build-full:
-	wasm-pack build --all-features --scope nymproject --target web --out-dir ../../dist/wasm/full-nym-wasm
-	wasm-opt -Oz -o ../../dist/wasm/full-nym-wasm/nym_wasm_sdk_bg.wasm ../../dist/wasm/full-nym-wasm/nym_wasm_sdk_bg.wasm
+	taskset -c 0-11 wasm-pack build --all-features --scope nymproject --target web --out-dir ../../dist/wasm/full-nym-wasm
+	taskset -c 0-11 wasm-opt -Oz -o ../../dist/wasm/full-nym-wasm/nym_wasm_sdk_bg.wasm ../../dist/wasm/full-nym-wasm/nym_wasm_sdk_bg.wasm
