add check for manual migration sync that will fail on `cargo build` in CI

--- a/nym-data-observatory/Cargo.toml
+++ b/nym-data-observatory/Cargo.toml
@@ -46,5 +46,6 @@ utoipauto = { workspace = true }
 
 [build-dependencies]
 anyhow = { workspace = true }
+glob = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
