improved import of 'UpgradeModeState' within the nym-node

--- a/nym-node/Cargo.toml
+++ b/nym-node/Cargo.toml
@@ -57,6 +57,7 @@ nym-client-core-config-types = { path = "../common/client-core/config-types", fe
     "disk-persistence",
 ] }
 nym-config = { path = "../common/config" }
+nym-credential-verification = { path = "../common/credential-verification" }
 nym-crypto = { path = "../common/crypto", features = ["asymmetric", "rand"] }
 nym-nonexhaustive-delayqueue = { path = "../common/nonexhaustive-delayqueue" }
 nym-mixnet-client = { path = "../common/client-libs/mixnet-client" }
