build.rs checks data observatory migrations have content of all shared scraper migrations and errors on changes or new files

--- a/nym-data-observatory/Cargo.toml
+++ b/nym-data-observatory/Cargo.toml
@@ -46,6 +46,7 @@ utoipauto = { workspace = true }
 
 [build-dependencies]
 anyhow = { workspace = true }
+blake3 = { workspace = true }
 glob = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
