--- a/nym-gateway-probe/Cargo.toml
+++ b/nym-gateway-probe/Cargo.toml
@@ -56,7 +56,7 @@ nym-ip-packet-requests = { path = "../common/ip-packet-requests" }
 nym-sdk = { path = "../sdk/rust/nym-sdk" }
 nym-validator-client = { path = "../common/client-libs/validator-client" }
 nym-credentials = { path = "../common/credentials" }
-nym-http-api-client-macro = { path = "../common/http-api-client-macro", features = ["debug-inventory"] }
+nym-http-api-client-macro = { path = "../common/http-api-client-macro" }
 nym-http-api-client = { path = "../common/http-api-client" }
 nym-node-status-client = { path = "../nym-node-status-api/nym-node-status-client" }
 
