--- a/common/nym-kcp/Cargo.toml
+++ b/common/nym-kcp/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "nym-kcp"
 version = "0.1.0"
-edition = "2021"
+edition = { workspace = true }
+license = { workspace = true }
 
 [lib]
 name = "nym_kcp"
