--- a/common/nym-kkt/Cargo.toml
+++ b/common/nym-kkt/Cargo.toml
@@ -2,7 +2,7 @@
 name = "nym-kkt"
 version = "0.1.0"
 authors = ["Georgio Nicolas <georgio@nymtech.net>"]
-edition = "2021"
+edition = { workspace = true }
 license.workspace = true
 
 [dependencies]
