--- a/common/nym-lp-common/Cargo.toml
+++ b/common/nym-lp-common/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "nym-lp-common"
 version = "0.1.0"
-edition = "2021"
+edition = { workspace = true }
+license = { workspace = true }
 
 [dependencies]
